--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -11,8 +11,8 @@
   width: 35px;
   height: 15px;
   border-radius: 8px;
-  background: #ff2cbd;
-  box-shadow: 0 0 10px 0 #fecdff;
+  background: #f3a109;
+  box-shadow: 0 0 10px 0 #0a0a0a;
 }
 
 .uno {
