--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -245,40 +245,28 @@ ul {
 
 /* Container */
 
-.container {
-  margin: 0 auto;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .container {
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .container {
-    width: 1024px;
-  }
-}
-
 .movies-list {
   display: flex;
   padding: 0;
   margin: 0;
 }
+.movie-picture {
+  width: 100%;
+}
 
 @media screen and (max-width: 767px) {
   .movies-list {
+    display: flex;
     flex-direction: column;
     align-items: center;
   }
-
   .movie-card {
-    margin-bottom: 30px;
+    margin: 20px 20px 0 20px;
+    width: calc(100% - 2 * 20px);
   }
 
   .movie-card:last-child {
-    margin-bottom: 0px;
+    margin-bottom: 40px;
   }
 }
 
@@ -286,22 +274,15 @@ ul {
   .movies-list {
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
   }
-
   .movie-card {
-    width: calc((100% - 2 * 110px) / 2);
+    width: calc((100% - 180px) / 2);
+    margin-top: 30px;
+  }
+  .movie-card:nth-child(2n-1) {
     margin-right: 30px;
-    margin-bottom: 30px;
-  }
-
-  .movie-card:nth-child(2n),
-  .movie-card:last-child {
-    margin-right: 0;
-  }
-
-  .movie-card:nth-last-child(-n + 2),
-  .movie-card:last-child {
-    margin-bottom: 0;
   }
 }
 
@@ -309,6 +290,8 @@ ul {
   .movies-list {
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 45px;
   }
 
   .movie-card {
