--- a/src/templates/modal.hbs
+++ b/src/templates/modal.hbs
@@ -16,8 +16,8 @@
             </p>
         </li>
         <li class="film-item">
-            <p class="film-item__about">Popularity</p>
-            <p class="film-item__description">{{popularity}}</p>
+            <p class="film-item__about">Popularity </p>
+            <p class="film-item__description popularity">{{popularity}}</p>
         </li>
         <li class="film-item">
             <p class="film-item__about">Original Title</p>
@@ -29,10 +29,6 @@
                 <span class="film-item__genre">{{name}}</span>
                 {{/each}}
             </p>
-        </li>
-        <li class="film-item">
-            <p class="film-item__about">Popularity</p>
-            <p class="film-item__description">{{popularity}}</p>
         </li>
     </ul>
     <p class="film-description__title">About</p>
