--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -116,7 +116,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #e5e5e5;
+  background-color: white;
 
   transform: scale(0.9);
   transition: transform 200ms ease-in-out;
