--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -246,6 +246,35 @@ ul {
 
 /* Container */
 
+@media screen and (min-width: 768px) {
+  .main-js {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 768px;
+    padding-top: 45px;
+    padding-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .main-js {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 1024px;
+    padding-top: 60px;
+    padding-bottom: 50px;
+  }
+}
+
+.movie-card:hover,
+.movie-card:focus {
+  transform: scale(1.03);
+}
+
 .movies-list {
   display: flex;
   padding: 0;
@@ -253,6 +282,7 @@ ul {
 }
 .movie-picture {
   width: 100%;
+  height: 400px;
 }
 
 @media screen and (max-width: 767px) {
@@ -338,6 +368,18 @@ ul {
   line-height: 14px;
   color: #ec6833;
   margin: 0;
+}
+
+.movie-vote {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.16;
+  margin-left: 16px;
+  color: white;
+
+  background: #ff6b01;
+  border-radius: 5px;
+  width: 36px;
 }
 
 li {
