--- a/src/styles.css
+++ b/src/styles.css
@@ -12,5 +12,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-}
 
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
