--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -202,22 +202,34 @@ ul {
 }
 
 .footer {
+  height: 77px;
   justify-content: center;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 1.18;
 
+  display: flex;
   align-items: center;
   text-align: center;
 
   color: #545454;
+  background: #f7f7f7;
 }
 
 @media screen and (min-width: 768px) {
   .footer {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
   }
 }
 
@@ -230,7 +242,7 @@ ul {
 
 @media screen and (min-width: 319px) {
   .footer__p {
-    margin-left: 50px;
+    margin-left: 20px;
   }
 }
 
