--- a/src/css/pagination.css
+++ b/src/css/pagination.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  padding-top: 60px;
   padding-bottom: 60px;
   width: 100%;
 }
