--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,7 +49,7 @@ ul {
 
   background: url('../img/header.jpg');
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: 100%;
 }
 
 .header__logo {
