--- a/src/css/library.css
+++ b/src/css/library.css
@@ -45,7 +45,7 @@ ul {
   height: 230px;
   /* width: 100%; */
   background: url('../img/library.jpg');
-  filter: brightness(56%);
+  background-color: rgba(0, 0, 0, 0.56);
   background-repeat: no-repeat;
   /* background-size: auto; */
 }
