--- a/src/templates/modal.hbs
+++ b/src/templates/modal.hbs
@@ -43,3 +43,8 @@
       queue</button>
   </div>
 </div>
+
+<div class="lightbox_background">
+  <img src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="{{title}}" data-id="{{id}}" width="100%"
+    height="100%" />
+</div>
