--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -25,21 +25,6 @@ body {
   }
 }
 
-/* этот стиль для кнопки-примера - удалить */
-.show-modal {
-  display: inline-block;
-  appearance: none;
-  background: #2875ed;
-  margin: 0.5em;
-  padding: 0.5em 1em;
-  border: none;
-  color: white;
-  font: inherit;
-  border-radius: 3px;
-  cursor: pointer;
-  outline: none;
-}
-
 /*  Modal  */
 
 .lightbox {
@@ -47,9 +32,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
+  width: 1024px;
+  /* top: 0; */
+  /* left: 0; */
   opacity: 0;
   overflow-y: scroll;
   pointer-events: none;
@@ -106,7 +91,7 @@ body {
 
 @media screen and (max-width: 767px) {
   .lightbox_button {
-    top: 35px;
+    top: 1%;
     right: 0;
   }
 }
@@ -117,19 +102,18 @@ body {
   align-items: center;
   justify-content: center;
   background-color: white;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 1);
+  top: 50%;
+  left: 50%;
 
-  transform: scale(0.9);
+  transform: translate(-50%, -50%) scale(1);
   transition: transform 200ms ease-in-out;
-  transform: scale(0.95);
-  transition: transform var(--animation-duration) var(--timing-function);
 }
 
 @media screen and (min-width: 1025px) {
   .lightbox_content {
     width: 1100px;
     height: 600px;
-    top: 10%;
-    left: 11%;
   }
 }
 
@@ -137,8 +121,6 @@ body {
   .lightbox_content {
     width: 984px;
     height: 600px;
-    top: 10%;
-    left: 20px;
   }
 }
 
@@ -146,72 +128,89 @@ body {
   .lightbox_content {
     width: 747px;
     height: 500px;
-    top: 10%;
-    left: 10px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .lightbox_content {
     width: 320px;
-    height: 1000px;
+    height: 1020px;
     display: flex;
     flex-direction: column;
-    top: 10%;
-    left: 0;
+    transform: translate(-50%, -25%) scale(1);
   }
 }
 
-.lightbox.is-open .lightbox_content {
+.lightbox_background {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.1;
+  pointer-events: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 200ms ease-in-out;
+}
+
+@media screen and (min-width: 1025px) {
+  .lightbox_background {
+    width: 1100px;
+    height: 600px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .lightbox_background {
+    width: 984px;
+    height: 600px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lightbox_background {
+    width: 747px;
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lightbox_background {
+    width: 320px;
+    height: 1020px;
+    display: flex;
+    flex-direction: column;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+/* .lightbox.is-open .lightbox_content {
   transform: scale(1);
-}
-
-/* .lightbox_image {
-  width: 426px;
-  height: 514px;
-  margin-left: 50px;
-  margin-right: 30px;
-  margin-top: 60px;
-  margin-bottom: 60px;
-} */
-
-/* @media screen and (min-width: 319px) {
-  .lightbox_image {
-    width: 280px;
-    height: 416px;
-    margin-left: 0;
-    margin-right: 0;
-    margin-bottom: 30px;
-    margin-top: 30px;
-  }
 } */
 
 @media screen and (min-width: 1024px) {
   .lightbox_image img {
-    width: 426px;
-    height: 514px;
-    margin-left: 50px;
-    margin-right: 30px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    width: 350px;
+    margin-right: 40px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lightbox_image img {
     width: 294px;
-    height: 416px;
-    margin-top: 50px;
+    /* height: 416px; */
+    /* margin-top: 50px; */
     margin-left: 50px;
     margin-right: 30px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
   }
 }
 
 @media screen and (max-width: 767px) {
   .lightbox_image img {
     width: 280px;
-    height: 416px;
+    /* height: 416px; */
     margin-top: 0;
     margin-left: 10px;
     margin-right: 10px;
