--- a/src/templates/modal.hbs
+++ b/src/templates/modal.hbs
@@ -44,7 +44,7 @@
   </div>
 </div>
 
-<div class="lightbox_background">
+{{!-- <div class="lightbox_background">
   <img src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="{{title}}" data-id="{{id}}" width="100%"
     height="100%" />
-</div>
+</div> --}}
