--- a/src/templates/modal.hbs
+++ b/src/templates/modal.hbs
@@ -2,6 +2,7 @@
 
 <div class="lightbox_image">
   <img src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="{{title}}" data-id="{{id}}" class="film-image" />
+  <button data-name='trailer' class="modal-btn trailer-btn" type="button">Watch the trailer</button>
 </div>
 
 <div class="ligthbox_info">
