--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,14 @@
 /* Main header and footer */
 
+/* UTILS____________________________________ */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 a {
   display: block;
   text-decoration: none;
-}
-
-p {
-  margin: 0;
 }
 
 img {
@@ -19,171 +21,305 @@ ul {
   list-style: none;
 }
 
+/* MAIN CONTAINER________________________ */
+
 .conteiner {
-  margin-left: auto;
-  margin-right: auto;
+  flex-grow: 1;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
 }
 
-@media screen and (min-width: 319px) {
-  .conteiner {
-    width: 320px;
-  }
-}
-
-@media screen and (min-width: 767px) {
-  .conteiner {
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1023px) {
-  .conteiner {
-    width: 1024px;
-  }
-}
+/* HEADER_____________________________ */
 
 .header {
-  display: flex;
-  height: 230px;
-  background-color: rgba(0, 0, 0, 0.56);
-  background: url('../img/header.jpg');
+  background-color: #000000;
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.56),
+      rgba(0, 0, 0, 0.56)
+    ),
+    url(../img/Header-mob.jpg);
+  min-width: 100%;
+  overflow: hidden;
+  min-height: 230px;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-position: 100%;
+  background-size: cover;
+}
+
+.nav-top {
+  padding-top: 41px;
+  margin-bottom: 37px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* LOGO_________________________________ */
+
+.logo {
+  display: flex;
+  text-decoration: none;
+}
+
+.logo:hover {
+  text-decoration: none;
 }
 
 .header__logo {
-  width: 24px;
-  height: 24px;
-
-  margin-top: 46px;
-  margin-left: 71px;
-  margin-right: 12px;
-}
-
-@media screen and (min-width: 319px) {
-  .header__logo {
-    margin-left: 23px;
-  }
+  margin-right: 10px;
 }
 
 .header__label {
-  margin-top: 41px;
-
-  width: 141px;
-  height: 35px;
-
-  font-family: Roboto;
-  font-style: normal;
+  display: none;
   font-weight: 500;
   font-size: 30px;
   line-height: 35px;
-
-  align-items: center;
-  text-align: center;
-
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
   color: #ffffff;
 }
 
+/* SCREEN MOBILE________________________________ */
 @media screen and (min-width: 319px) {
+  .conteiner {
+    max-width: 320px;
+  }
+
   .header__label {
     display: none;
   }
-}
 
-@media screen and (min-width: 768px) {
-  .header__label {
-    display: block;
-    margin-right: 0;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .header__label {
-    display: block;
-    margin-right: 99px;
-  }
-}
-
-.header__search {
-  display: flex;
-  height: 25px;
-  width: 336px;
-  margin-top: 113px;
-
-  border-bottom: 0.5px solid #ffffff;
-}
-
-@media screen and (min-width: 319px) {
   .header__search {
     width: 228px;
     margin-left: -40px;
   }
+
+  .header__navigation {
+    margin-left: -115px;
+  }
+
+  .header__logo {
+    margin-left: 23px;
+  }
+
+  /* retina */
+  @media only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min--moz-device-pixel-ratio: 2),
+    only screen and (-moz-min-device-pixel-ratio: 2),
+    only screen and (-o-min-device-pixel-ratio: 2/1),
+    only screen and (min-device-pixel-ratio: 2),
+    only screen and (min-resolution: 192dpi),
+    only screen and (min-resolution: 2dppx) {
+    .header {
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../img/Header-mob-2x.jpg);
+    }
+  }
 }
 
-@media screen and (min-width: 767px) {
+/* SCREEN TABLET_________________________________ */
+@media screen and (min-width: 768px) {
+  .conteiner {
+    max-width: 768px;
+    padding-left: 75px;
+    padding-right: 75px;
+  }
+
+  .header {
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url(../img/Header-tablet.jpg);
+  }
+
+  .header__label {
+    display: block;
+    margin-right: 99px;
+  }
+
   .header__search {
     width: 336px;
     margin-right: 0;
   }
+
+  .header__navigation {
+    margin-left: 0;
+  }
+
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .footer__div {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 28px;
+  }
+
+  /* retina */
+  @media only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min--moz-device-pixel-ratio: 2),
+    only screen and (-moz-min-device-pixel-ratio: 2),
+    only screen and (-o-min-device-pixel-ratio: 2/1),
+    only screen and (min-device-pixel-ratio: 2),
+    only screen and (min-resolution: 192dpi),
+    only screen and (min-resolution: 2dppx) {
+    .header {
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../img/Header-tablet-2x.jpg);
+    }
+  }
 }
 
+/* SCREEN DESKTOP________________________________ */
 @media screen and (min-width: 1024px) {
+  .conteiner {
+    max-width: 1024px;
+    padding-left: 71px;
+    padding-right: 71px;
+  }
+
+  .header {
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.56),
+        rgba(0, 0, 0, 0.56)
+      ),
+      url(../img/Header-desktop.jpg);
+  }
+
+  .header__label {
+    display: block;
+    margin-right: 99px;
+  }
+
   .header__search {
     width: 336px;
     margin-left: 0px;
     margin-right: 130px;
   }
+
+  .header__navigation {
+    margin-left: 0;
+  }
+
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .footer__div {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 28px;
+  }
+
+  /* retina */
+  @media only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min--moz-device-pixel-ratio: 2),
+    only screen and (-moz-min-device-pixel-ratio: 2),
+    only screen and (-o-min-device-pixel-ratio: 2/1),
+    only screen and (min-device-pixel-ratio: 2),
+    only screen and (min-resolution: 192dpi),
+    only screen and (min-resolution: 2dppx) {
+    .header {
+      background-image: linear-gradient(
+          to right,
+          rgba(0, 0, 0, 0.56),
+          rgba(0, 0, 0, 0.56)
+        ),
+        url(../img/Header-desktop-2x.jpg);
+    }
+  }
 }
+
+/* HEADER INPUT_________________ */
+
+.header__search {
+  position: relative;
+  text-align: center;
+  margin: 0 auto;
+}
+
 .header__input {
-  width: 336px;
-  height: 20px;
-
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
-
-  align-items: center;
-
-  color: #ffffff;
+  display: block;
+  width: 100%;
+  height: 30px;
+  margin-bottom: 22px;
   background-color: transparent;
   border: none;
+  border-bottom: 0.5px solid #ffffff;
+  caret-color: #ffffff;
+  color: #ffffff;
+  outline: none;
+}
+
+.header__input::placeholder {
+  font-size: 14px;
+  line-height: 16px;
+  border-top: none;
+  color: #ffffff;
+  caret-color: #ffffff;
+}
+
+.header__input.is-not-visible {
+  display: none;
 }
 
 .header__navigation {
   display: flex;
-  margin-top: 58px;
+  margin-bottom: 0px;
 }
 
-@media screen and (min-width: 319px) {
-  .header__navigation {
-    margin-left: -115px;
-  }
+.search-icon {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  display: block;
+  width: 12px;
+  height: 12px;
+  background-image: url(../img/search.svg);
 }
 
-@media screen and (min-width: 768px) {
-  .header__navigation {
-    margin-left: 0;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .header__navigation {
-    margin-left: 0;
-  }
-}
-
+/* HOME and LIBRARY LINKS__________________________ */
 .nav__item {
   margin-right: 39px;
 }
 
+.nav__item:not(:last-child) {
+  margin-right: 40px;
+}
+
 .nav__link {
-  font-family: Roboto;
-  font-style: normal;
+  text-decoration: none;
+  font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
 
   align-items: center;
   text-align: center;
@@ -193,66 +329,39 @@ ul {
 }
 
 .nav__link:hover {
-  border-bottom: 1px solid #ff6b08;
+  text-decoration: none;
+  color: white;
 }
 
-.active {
-  border-bottom: 1px solid #ff6b08;
+.nav__link.active::after {
+  display: block;
+  content: '';
+  height: 3px;
+  background-color: red;
 }
 
+/* FOOTER_____________________________ */
 .footer {
-  height: 77px;
-  justify-content: center;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.18;
+  background-color: #f7f7f7;
+  width: 100%;
+}
 
-  display: flex;
-  align-items: center;
+.footer-top,
+.footer__p {
+  font-size: 14px;
+  line-height: 1.14;
   text-align: center;
-
   color: #545454;
-  background: #f7f7f7;
+  margin: 0;
 }
 
-@media screen and (min-width: 768px) {
-  .footer {
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-  }
+.footer-top {
+  margin-bottom: 10px;
 }
 
 .footer__div {
-  display: flex;
-}
-.footer__p {
-  margin-right: 10px;
-}
-
-@media screen and (min-width: 319px) {
-  .footer__p {
-    margin-left: 20px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .footer__p {
-    margin-left: 0;
-  }
-}
-
-.footer__img {
-  margin-right: 10px;
+  padding-top: 30px;
+  padding-bottom: 28px;
 }
 
 /* Container */
